--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
   <link rel="stylesheet" href="./assets/styles.css" />
   <!-- Import Vue.js -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-
 </head>
 
 <body>
   <div id="app">
-    <h1>{{product}}</h1>
-    <p>{{description}}</p>
+    <div class="nav-bar"></div>
+
+    <div class="product-display">
+      <div class="product-container">
+        <div class="product-image">
+          <img :src="image">
+        </div>
+        <div class="product-info">
+          <h1>{{product}}</h1>
+          <p>In Stock</p>
+          <p>Out of Stock</p>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Import Js -->
@@ -22,9 +33,8 @@
 
   <!-- Mount App -->
   <script>
-    const mountedApp = app.mount('#app')
+    const mountedApp = app.mount("#app");
   </script>
-
 </body>
 
 </html>
