--- a/index.html
+++ b/index.html
@@ -14,22 +14,18 @@
   <div id="app">
     <div class="nav-bar"></div>
 
-    <div class="product-display">
-      <div class="product-container">
-        <div class="product-image">
-          <img :src="image">
-        </div>
-        <div class="product-info">
-          <h1>{{product}}</h1>
-          <p>In Stock</p>
-          <p>Out of Stock</p>
-        </div>
-      </div>
-    </div>
+    <div class="cart">Cart ({{cart.length}})</div>
+    <product-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeCart"></product-display>
+
+
   </div>
 
   <!-- Import Js -->
   <script src="./main.js"></script>
+
+  <!-- Import Components -->
+  <script src="./components/ProductDisplay.js"></script>
+  <script src="./components/ProductDetails.js"></script>
 
   <!-- Mount App -->
   <script>
