--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <product-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeCart"></product-display>
 
 
+
   </div>
 
   <!-- Import Js -->
@@ -26,6 +27,8 @@
   <!-- Import Components -->
   <script src="./components/ProductDisplay.js"></script>
   <script src="./components/ProductDetails.js"></script>
+  <script src="./components/ReviewForm.js"></script>
+  <script src="./components/ReviewList.js"></script>
 
   <!-- Mount App -->
   <script>
